updated content and styling

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
 <div class="pageContainer">
   <div class="imageContainer"> 
-    <img src="images/pizza.jpg" alt="Pizza with pepperoni and cheese." /> 
+    <img src="images/pomegranate.jpg" alt="Pomegranate" /> 
   </div>
   <div class="textContainer">
-    <h1>Pizza!</h1>
-    <p>My Favorite Toppings: </p>
+    <h1>Pomegranates!</h1>
+    <p>Why I love them: </p>
     <ul>
-      <li>Pepperoni</li>
-      <li>Mozzarella Cheese</li>
-      <li>Mushrooms</li>
+      <li>Tasty</li>
+      <li>Healthy</li>
+      <li>Versatile</li>
     </ul>
   </div>
 </div>
